--- a/README.Rmd
+++ b/README.Rmd
@@ -26,9 +26,9 @@ knitr::opts_chunk$set(
 
 plume provides tools for handling and generating author-related information for scientific writing in R Markdown and Quarto. The package implements two R6 classes:
 
-- `PlumeQuarto`: class that allows you to push author metadata in YAML files or the YAML header of Quarto files. The generated YAML complies with Quarto's [author and affiliations schemas](https://quarto.org/docs/journals/authors.html). This is the class to use if you work with journal templates.
+- `PlumeQuarto`: class that allows you to add or update author metadata in YAML files or the YAML header of Quarto documents. The generated YAML complies with Quarto's [author and affiliations schemas](https://quarto.org/docs/journals/authors.html). This is the class to use when working with journal templates.
 
-- `Plume`: class that generates author lists and other author-related information as character strings. This is an easy and convenient solution when you don't need preformatted documents.
+- `Plume`: class that generates author lists and other author-related information as character vectors. This is an simple and convenient solution when you don't need preformatted documents.
 
 ## Installation
 
@@ -88,7 +88,7 @@ aut$to_yaml()
 cat(readr::read_file(tmp_file))
 ```
 
-Alternatively, you can generate author information as character strings using `Plume`:
+Alternatively, you can generate author information as character vectors using `Plume`:
 
 ```{r, message = FALSE}
 aut <- Plume$new(encyclopedists)
