--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ plume provides tools for handling and generating author-related information for 
 
 - `PlumeQuarto`: class that allows you to add or update author metadata in YAML files or the YAML header of Quarto documents. The generated YAML complies with Quarto's [author and affiliations schemas](https://quarto.org/docs/journals/authors.html). This is the class to use when working with journal templates.
 
-- `Plume`: class that generates author lists and other author-related information as character vectors. This is an simple and convenient solution when you don't need preformatted documents.
+- `Plume`: class that generates author lists and other author-related information as character vectors. This is a simple and convenient solution when you don't need preformatted documents.
 
 ## Installation
 
