Polish the documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ tmp_file <- withr::local_tempfile(
 )
 ```
 
-`PlumeQuarto` lets you push author metadata in YAML files or the YAML header of any `.qmd` file using the `to_yaml()` method.
+`PlumeQuarto` lets you insert author data into YAML files or the YAML header of any `.qmd` document using the `to_yaml()` method.
 
 Consider the following example:
 
@@ -75,7 +75,7 @@ cat(readr::read_file(tmp_file))
 ```{r, eval = FALSE}
 aut <- PlumeQuarto$new(
   encyclopedists,
-  file = "file.qmd"
+  file = "example.qmd"
 )
 aut$set_corresponding_authors(1, 4)
 aut$to_yaml()
