--- a/vignettes/working-in-other-languages.Rmd
+++ b/vignettes/working-in-other-languages.Rmd
@@ -17,7 +17,7 @@ library(plume)
 
 If you work in a language other than English, you can extend plume classes with default names in your desired language. plume provides `set_default_names()` to help you set new default names.
 
-E.g. to extend `Plume` with default names in French:
+For example, to extend `Plume` with default names in French:
 
 ```{r}
 PlumeFr <- R6::R6Class(
